# pyo3-quant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  justfile  pyo3_quant.pyi  pyproject.toml  readme.md  release-please-manifest.json  verify_refactor.py
.cargo/: config.toml
.github/workflows/: CI.yml  autotag.yml  release-please.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
doc/: Dev_Setup_Notes.md  Notebook_Cleanup.md  Setup_Script_Summary.md  backtest-simple.md  backtest.md  backtest_architecture.md  backtest_prompt.md  calc_margin.md  indicators name rule.md  indicators_name_rule.md  position-transition-rules.md  project_structure.md  python_api.md  signal new.md  signal.md  test-rule.md  trading_bot_architecture.md  trading_philosophy.md
doc/backtest/: backtest_architecture.md  output_columns.md  parameters.md  performance_analyzer.md  risk_management.md  state_machine_constraints.md  todo event_driven_refactor.md
doc/benchmark/: benchmark_methodology.md  performance_analysis.md  results.md
doc/bot/: 01_bot_design_spec.md  02_callbacks_spec.md  03_parser_spec.md  04_runtime_checks_spec.md  05_api_optimization_spec.md  06_testing_strategy.md  99_todo.md
doc/display/: chart_rendering_guide.md  chart_widget_patch_notes.md
doc/optimizer/: optimizer_design_philosophy.md  parameter_optimizer_design.md  walk_forward_artifacts_architecture.md  walk_forward_design_philosophy.md
doc/polars/: about polars.md  clone_behavior.md  polars_nan_vs_null.md
doc/prompt/: error_prompt.md
doc/runner/: pyo3_interface_design.md  usage_scenarios.md
doc/structure/: multi_timeframe_data_integrity.md  project_structure.md  pyo3_interface_design.md  python_api.md  strategy_cross_module_plan.md  usage_scenarios.md
doc/tasks/: TASK_INDEX.md
doc/testing/: pytest_unification_guide.md  test-rule.md
doc/todo/: TODO_architecture.md  TODO_multi_position_system.md  TODO_param_dependency_enum.md  TODO_raw_source_boundary_and_external_indicators.md  TODO_signal_text_dsl.md  TODO_structure_searcher.md
doc/trading_philosophy/: manual_trading.md  quantitative_trading.md
py_entry/: data_generator.py  main.py
py_entry/Test/: test_public_api_stub_contract.py  test_public_surface_legacy_name_guard.py  test_runner_view_contracts.py
py_entry/benchmark/: _numba_complexity_data.py  _numba_complexity_kernels.py  config.py  data_utils.py  numba_complexity_test.py  pyo3_quant_runner.py  run_benchmark.py  vectorbt_runner.py
py_entry/charts/: __init__.py  _generation_bottom.py  _generation_core.py  _generation_panels.py  _generation_template.py  _series_builders_price.py  _series_builders_refs.py  core_helpers.py  generation.py  helpers.py  options.py  series_builders.py  settings.py
py_entry/configs/: __init__.py  param_set.py
py_entry/constants/: __init__.py  seed.py
py_entry/data_generator/: __init__.py  config.py  data_generator.py  heikin_ashi_generator.py  time_utils.py  type_guards.py
py_entry/debug/: debug_allow_gaps.py  debug_compare.py  debug_data_consistency.py  debug_data_gen.py  debug_divergence.py  debug_exit_in_bar.py  debug_exit_in_bar_diff.py  debug_fix_verify.py  debug_gap_divergence.py  debug_nan_entry.py  debug_params_setter_temp.py  debug_position_size.py  debug_price_diff.py  debug_pyo3_structure.py  debug_return_diff.py  debug_sl_calc.py  debug_sl_diff.py  debug_sl_exact.py  debug_sl_gap.py  debug_sl_intrabar.py  debug_sl_price.py  debug_sl_timing.py  debug_sltp_diff.py  debug_strict.py  debug_tp.py  debug_trade_compare.py  debug_trade_count.py  debug_trade_deep.py  debug_trade_diff.py  debug_trade_extract.py  debug_trade_final.py  debug_trade_lifecycle.py  debug_trade_lifecycle_deep.py  debug_tsl_update.py  fix_notebooks.py  inspect_scanner_data.py  update_baseline.py
py_entry/example/: add_path.py  basic_backtest.py  custom_backtest.ipynb  custom_backtest.py  custom_backtest_marimo.py  demo.ipynb  example.ipynb  exception_handling_example.py  optimizer_demo.py  optimizer_sensitivity_demo_fixed.py  optuna_optimizer_demo.py  real_data_backtest.ipynb  real_data_backtest.py  reversal_extreme_backtest.py  walk_forward_demo.py
py_entry/helpers/: __init__.py  condition_builders.py  template_builders.py
py_entry/io/: __init__.py  _converters_bundle.py  _converters_result.py  _converters_serialization.py  auth.py  common.py  config_loader.py  configs.py  converters.py  data_client.py  dataframe_utils.py  path_utils.py  savers.py  types.py  upload.py  zip_utils.py
py_entry/minimal_working_example/: comparison_pandas_ta_and_talib.py  pydataframe_to_dataframe.py
py_entry/optimizer/: __init__.py  optimizer.py
py_entry/private_strategies/: __init__.py  config.py  demo.ipynb  sma_2tf.py  stage_tools.py  strategy_searcher.py  template.py
py_entry/runner/: __init__.py  _optuna_execution.py  _optuna_param_apply.py  _optuna_sampling.py  backtest.py  chart_logic.py  config_logic.py  diagnostics.py  execution_logic.py  optimization_logic.py  optimizer_logic.py  optuna_optimizer.py  params.py  pipeline.py  result_logic.py  runner.py  setup_utils.py  walk_forward_logic.py
py_entry/scanner/: __init__.py  _scan_runtime.py  _scan_runtime_helpers.py  batcher.py  config.py  data_source.py  indicators.py  (+6 more)
scripts/: live_sync_check.py  setup_dev_env.sh
src/: lib.rs
(+896 files in other folders)
