
[package]
name = "pyo3-quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_quant"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.51", features = [
    "lazy",
    "rolling_window",
    "ewma",
    "abs",
    "diff",
] }
polars-ops = { version = "0.51.0", features = ["ewma"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
pyo3-polars = "0.24"
rayon = "1.11.0"
thiserror = "2.0.17"


[profile.dev]
incremental = true
