
[package]
name = "pyo3-quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_quant"
crate-type = ["cdylib"]

[dependencies]
nom = "8.0.0"
polars = { version = "0.52", default-features = false, features = [
    "lazy",
    "rolling_window",
    "ewma",
    "abs",
    "diff",
    "dtype-struct",

] }
pyo3 = { version = "0.26" }
pyo3-polars = "0.25"
rayon = "1.11.0"
thiserror = "2.0.17"


[profile.dev]
incremental = true
