
[package]
name = "pyo3-quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_quant"
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "8.0.0"
polars = { version = "0.52", default-features = false, features = [
    "lazy",
    "rolling_window",
    "ewma",
    "abs",
    "diff",
    "dtype-struct",
    "dtype-i8",
    "dtype-u8",
] }
pyo3 = { version = "0.26" }
pyo3-polars = "0.25"
pyo3-stub-gen = "0.18.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
statrs = "0.18.0"
thiserror = "2.0.17"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[profile.dev]
incremental = true
