[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-quant"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin-import-hook>=0.3.0",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
    "pandas>=2.3.3",
    "pandas-ta @ git+https://github.com/hxse/pandas-ta.git@development",
    "ta-lib @ https://github.com/cgohlke/talib-build/releases/download/v0.6.7/ta_lib-0.6.7-cp313-cp313-win_amd64.whl ; sys_platform == 'win32'",
    "ta-lib >=0.6.7 ; sys_platform != 'win32'",
]

[tool.pytest.ini_options]
# 列表中的字符串是想要忽略的文件夹名称
norecursedirs = ["source_ref"]
pythonpath = ["py_entry"]
addopts = ["--import-mode=importlib"]
