[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-quant"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "anywidget>=0.9.21",
    "httpx",
    "loguru",
    "numpy",
    "polars",
    "pyarrow",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin-import-hook",
    "pytest",
    "pandas",
    "pandas-ta @ git+https://github.com/hxse/pandas-ta.git@development",
    "pandas-ta-classic",
    "ta-lib @ https://github.com/cgohlke/talib-build/releases/download/v0.6.8/ta_lib-0.6.8-cp313-cp313-win_amd64.whl ; sys_platform == 'win32'",
    "ta-lib >=0.6.8 ; sys_platform != 'win32'",
    "pre-commit>=4.5.0",
    "nbstripout>=0.8.2",
]

[tool.pytest.ini_options]
norecursedirs = ["source_ref"]
